@@ -1,3 +1,8 @@
+Thu Aug 28 17:29:24 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py,xappy/unittests/query_serialise.py: Add support
+	  and tests for serialising the result of xappy.Query()
+
 Thu Aug 28 13:49:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/query.py,xappy/searchconnection.py: Add methods to allow a
